Changed the colors from orange to blue

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
 		<title>LLM Chat App</title>
 		<style>
 			:root {
-				--primary-color: #f6821f;
-				--primary-hover: #e67e22;
+				--primary-color: #3c9bda;
+				--primary-hover: #204ad4;
 				--light-bg: #f9fafb;
 				--border-color: #e5e7eb;
 				--text-color: #1f2937;
 				--text-light: #6b7280;
-				--user-msg-bg: #fff2e6;
+				--user-msg-bg: #acc7f3;
 				--assistant-msg-bg: #f3f4f6;
 			}
 
