--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,18 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>LLM Chat App</title>
+		<link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet"
+/>
+		<title>Focus Buddy</title>
 		<style>
 			:root {
 				--primary-color: #3c9bda;
 				--primary-hover: #204ad4;
-				--light-bg: #f9fafb;
+				--light-bg: #d1e3f5;
 				--border-color: #e5e7eb;
 				--text-color: #1f2937;
 				--text-light: #6b7280;
-				--user-msg-bg: #acc7f3;
+				--user-msg-bg: #a9c5f0;
 				--assistant-msg-bg: #f3f4f6;
 			}
 
@@ -24,31 +26,30 @@
 
 			body {
 				font-family:
-					-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
-					Cantarell, sans-serif;
-				line-height: 1.6;
+					"Lora", sans-serif;
+				line-height: 1.5;
 				color: var(--text-color);
 				max-width: 800px;
 				margin: 0 auto;
-				padding: 1rem;
+				padding: 0.5rem;
 			}
 
 			header {
 				text-align: center;
-				margin-bottom: 2rem;
-				padding: 1rem 0;
+				margin-bottom: 0.8rem;
+				padding: 0.5rem 0;
 				border-bottom: 1px solid var(--border-color);
 			}
 
 			h1 {
-				font-size: 1.5rem;
+				font-size: 1.8rem;
 				color: var(--primary-color);
 			}
 
 			.chat-container {
 				display: flex;
 				flex-direction: column;
-				height: calc(100vh - 200px);
+				height: calc(100vh - 150px);
 				min-height: 400px;
 				border: 1px solid var(--border-color);
 				border-radius: 8px;
@@ -129,7 +130,7 @@
 			}
 
 			footer {
-				margin-top: 1rem;
+				margin-top: 0.8rem;
 				text-align: center;
 				font-size: 0.85rem;
 				color: var(--text-light);
@@ -138,7 +139,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Cloudflare AI Chat</h1>
+			<h1>Focus Buddy</h1>
 			<p>Powered by Cloudflare Workers AI</p>
 		</header>
 
@@ -146,7 +147,7 @@
 			<div id="chat-messages" class="chat-messages">
 				<div class="message assistant-message">
 					<p>
-						Hello! I'm an LLM chat app powered by Cloudflare Workers AI. How can
+						Hi friend! I'm your helpful study buddy powered by Cloudflare Workers AI. How can
 						I help you today?
 					</p>
 				</div>
@@ -168,7 +169,7 @@
 		</div>
 
 		<footer>
-			<p>Cloudflare Workers AI Chat Template &copy; 2025</p>
+			<p>Created with Cloudflare Workers AI Chat Template &copy; 2025</p>
 		</footer>
 
 		<!-- Chat app script -->
